# mosaics

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
examples/: benchmark_env.yml
examples/01_toy_minimization/: toy_minimization.py
examples/02_xTB_property_optimization/: optimize_solvation_energy_QM9.py
examples/03_distributed_random_walk/: parallelized_optimize_solvation_energy_EGP.py  parallelized_toy_minimization.py
examples/04_blind_optimization_protocol/: solvation_energy_minimization_beta_optimization.py  toy_minimization_beta_optimization.py
examples/05_chemspacesampler/: README.md
examples/05_chemspacesampler/app/: Dockerfile  app.py  chemspace.yml
examples/05_chemspacesampler/run_representations/: run_BoB.py  run_CM.py  run_ECFP.py  run_MBDF.py  run_MolDescriptors.py  run_SOAP.py  run_atomic_energies.py  run_cliffs.py  run_inv_ECFP.py
examples/05_chemspacesampler/tutorial/: tutorial.ipynb
mosaics/: __init__.py  beta_choice.py  cross_coupling.py  crossover.py  data.py  distributed_random_walk.py  elementary_mutations.py  ext_graph_compound.py  misc_procedures.py  modify.py  optimization_protocol.py  periodic.py  random_walk.py  rdkit_draw_utils.py  rdkit_utils.py  test_utils.py  trajectory_analysis.py  utils.py  valence_treatment.py  xyz2graph.py
mosaics/chem_graph/: __init__.py  base_chem_graph.py  chem_graph.py  heavy_atom.py  resonance_structures.py
mosaics/minimized_functions/: __init__.py  chemspace_potentials.py  chemspace_sampler_default_params.py  inversion_potentials.py  morfeus_quantity_estimates.py  representations.py  toy_problems.py
tests/: benchmark_env.yml
tests/01_toy_minimization/: toy_minimization.py
tests/03_distributed_random_walk/: parallelized_toy_minimization.py  parallelized_toy_minimization_other_seed.py
tests/04_blind_optimization_protocol/: toy_minimization_beta_optimization.py
tests/old_0.2.0_benchmarks/01_toy_minimization/: toy_minimization.py
tests/old_0.2.0_benchmarks/03_distributed_random_walk/: parallelized_toy_minimization.py  parallelized_toy_minimization_other_seed.py
tests/old_0.2.0_benchmarks/04_blind_optimization_protocol/: toy_minimization_beta_optimization.py
