[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "mosaics"
version = "0.3.0"
dependencies=[
    "numpy",
    "igraph",
    "sortedcontainers",
    "scipy",
    "loky",
    "joblib",
]
authors=[
 {name="Konstantin Karandashev"},
 {name="Jan Weinreich"},
]
description="Evolutionary Monte Carlo algorithm for optimization in chemical space."
readme="README.md"
license={text="MIT License"}
[tool.setuptools]
packages=["mosaics", "mosaics.chem_graph", "mosaics.minimized_functions"]
