[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
]

[project]
name = "mosaics"
version = "0.3.3"

description = "Evolutionary Monte Carlo algorithm for optimization in chemical space."
readme = "README.md"
license.text = "MIT License"
authors = [
  { name = "Konstantin Karandashev" },
  { name = "Jan Weinreich" },
]
# TBH should work earlier Python versions too, but that is untested.
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "igraph>=1",
  "joblib",
  "loky",
  "numpy",
  "scipy",
  "sortedcontainers",
]

[tool.setuptools]
packages = [
  "mosaics",
  "mosaics.chem_graph",
  "mosaics.minimized_functions",
]
